--- a/css/layout-l.css
+++ b/css/layout-l.css
@@ -1,95 +1,114 @@
-.clearfix::after{
+.clearfix::after {
     content: '';
     display: block;
     clear: both;
-    }
-    .main{
-        min-width: 300px;
-        width: 100%;
-        margin:auto;
-        outline: 1px solid gray;
-    }
+}
+
+.main {
+    min-width: 300px;
+    width: 100%;
+    margin: auto;
+    outline: 1px solid gray;
+}
+
+
 /*header*/
-.header-nav-bar{
+
+.header-nav-bar {
     width: 80%;
     margin-right: auto;
     margin-left: auto;
-    padding-top:2%;
+    padding-top: 2%;
     margin-bottom: 10%;
 }
-.header-nav-bar::after{
+
+.header-nav-bar::after {
     content: '';
     display: block;
     clear: both;
 }
-.small-nav-icons{
-    display:none;
+
+.small-nav-icons {
+    display: none;
 }
-.nav-bar-brand{
+
+.nav-bar-brand {
     display: block;
 }
 
-.nav-bar-right{
-    display:inline-block;
-    }
-    .nav-bar-left{
-        display: block;
-        margin-left:0%;
-        margin-top:5%;
-    }
-    .nav-bar-right{
-        display:block;
-        margin-right:0;
-        margin-left: auto;
-        margin-left: 0%;
-        margin-top:5%;
-    }
-    .nav-bar-items{
+.nav-bar-right {
+    display: inline-block;
+}
+
+.nav-bar-left {
+    display: block;
+    margin-left: -1.0vw;
+    margin-top: 5%;
+}
+
+.nav-bar-right {
+    display: block;
+    margin-right: 0;
+    margin-left: auto;
+    margin-left: 0%;
+    margin-top: 5%;
+}
+
+.nav-bar-items {
     display: inline-block;
     margin: 1%;
-    }
-    .login-div{
-        display: inline-block;
-    }
-    .member{
-        display: inline-block;
-        padding-top:2.5%;
-        padding-bottom:2.5%;
-        padding-right: 10%;
-        padding-left: 10%;
-        margin-left: 5%;
-        border-radius: 10% 10% 10% 10% / 100% 100% 100% 100% ;
-        font-weight: bold;
-    };
-   
-
-.nav-bar-items{
-display: inline-block;
-margin: 1%;
 }
-.login-div{
+
+.login-div {
     display: inline-block;
 }
 
-.header-center{
+.member {
+    display: inline-block;
+    padding-top: 2.0%;
+    padding-bottom: 2.0%;
+    padding-right: 5%;
+    padding-left: 5%;
+    margin-left: 5%;
+    border-radius: 15px;
+    font-weight: bold;
+    font-size: 2.5vw;
+}
+
+;
+.nav-bar-items {
+    display: inline-block;
+    margin: 1%;
+}
+
+.login-div {
+    display: inline-block;
+}
+
+.header-center {
     width: 40%;
     margin-left: auto;
     margin-right: auto;
 }
-.center-headline{
-    margin-top:5%;
-    margin-bottom:5%;
+
+.center-headline {
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
-.header-center-text{
-    margin-top:10%;
-    margin-bottom:10%;
+
+.header-center-text {
+    margin-top: 10%;
+    margin-bottom: 10%;
 }
-.header-center-buttons{
+
+.header-center-buttons {
     width: fit-content;
     margin: 0 auto;
     margin-bottom: 20%;
 }
-.header-center-button-left, .header-center-button-right{
+
+.header-center-button-left,
+.header-center-button-right {
     width: 20vw;
     display: block;
     margin-left: auto;
@@ -100,205 +119,247 @@ margin: 1%;
     border-radius: 25% 25% 25% 25% / 100% 100% 100% 100%;
 }
 
-.header-lower::after{
+.header-lower::after {
     content: '';
     display: block;
     clear: both;
 }
-.header-lower-container{
 
-}
-.header-lower-item{
+.header-lower-container {}
+
+.header-lower-item {
     display: block;
     width: 50%;
-    margin:auto;
-    margin-top:5%;
-    margin-bottom:5%;
-    
-}
-.header-lower-items-image{
-    display: block;
-    margin-bottom:5%;
-    margin-left:auto;
-    margin-right:auto;
-}
-.header-lower-h3,.header-lower-p{
-    margin:auto;
-    text-align: center;
-}
-/*header*/
-/*features*/
-.features::after{
-    content: '';
-    display: block;
-    clear: both;
-}
-.features-container{
-    width: 75%;
-    margin:0 auto;
-    padding-top:5%;
-    padding-bottom:5%;
-}
-.features-item{
-    width:25%;
-    display:inline-block;
-    padding:2%;
-    margin-left:2.5%;
-}
-.feature-item-image{
-    display: block;
-    margin-left:auto;
-    margin-right:auto;
+    margin: auto;
     margin-top: 5%;
     margin-bottom: 5%;
 }
-/*features*/
-/*testimonial*/
-.testimonals-header-container{
-    padding-top: 5%;
 
+.header-lower-items-image {
+    display: block;
+    margin-bottom: 5%;
+    margin-left: auto;
+    margin-right: auto;
 }
-.testimonial-body::after{
+
+.header-lower-h3,
+.header-lower-p {
+    margin: auto;
+    text-align: center;
+}
+
+
+/*header*/
+
+
+/*features*/
+
+.features::after {
     content: '';
     display: block;
     clear: both;
 }
-.testimonial-body-container{
+
+.features-container {
     width: 75%;
-    margin:0 auto;
-    padding-top:5%;
-    padding-bottom:5%;
+    margin: 0 auto;
+    padding-top: 5%;
+    padding-bottom: 5%;
 }
-.testimonial-body-item{
-    width:100%;
-    display:block;
-    padding:2%;
-    margin-left:auto;
-    margin-top:5%;
-    margin-bottom: 5%;
-    padding-bottom:5%;
+
+.features-item {
+    width: 25%;
+    display: inline-block;
+    padding: 2%;
+    margin-left: 2.5%;
 }
-.testimonial-image{
+
+.feature-item-image {
     display: block;
-    margin-left:auto;
-    margin-right:auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 5%;
+    margin-bottom: 5%;
+}
+
+
+/*features*/
+
+
+/*testimonial*/
+
+.testimonals-header-container {
+    padding-top: 5%;
+}
+
+.testimonial-body::after {
+    content: '';
+    display: block;
+    clear: both;
+}
+
+.testimonial-body-container {
+    width: 75%;
+    margin: 0 auto;
+    padding-top: 5%;
+    padding-bottom: 5%;
+}
+
+.testimonial-body-item {
+    width: 100%;
+    display: block;
+    padding: 2%;
+    margin-left: auto;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    padding-bottom: 5%;
+}
+
+.testimonial-image {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     margin-top: 5%;
     margin-bottom: 2.5%;
 }
-.testimonial-stars{
+
+.testimonial-stars {
     width: fit-content;
     margin: auto;
 }
+
+
 /*testimonial/
 /*links*/
-.links-upper-container::after{
+
+.links-upper-container::after {
     content: '';
     display: block;
     clear: both;
 }
-.links-upper-container{
+
+.links-upper-container {
     width: 75%;
-    margin:0 auto;
-    padding-top:5%;
-    padding-bottom:5%;
-}
-.links-upper-item-container{
-    width:10%;
-    display:inline-block;
-    padding:0%;
-    margin-left:5.5%;
+    margin: 0 auto;
+    padding-top: 5%;
+    padding-bottom: 5%;
 }
 
-.links-lower::after{
+.links-upper-item-container {
+    width: 10%;
+    display: inline-block;
+    padding: 0%;
+    margin-left: 5.5%;
+}
+
+.links-lower::after {
     content: '';
     display: block;
     clear: both;
 }
-.links-lower{
+
+.links-lower {
     width: 75%;
-    margin:0 auto;
-    padding-top:2%;
-    padding-bottom:2%;
-    padding-left:5%;
-    padding-right:5%;
+    margin: 0 auto;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 
-
-.links-lower-h3{
+.links-lower-h3 {
     width: 70%;
     display: block;
     margin: auto;
     margin-bottom: 5%;
-    
 }
-.links-lower-button{
+
+.links-lower-button {
     padding-top: 2.5%;
     padding-bottom: 2.5%;
     float: left;
     width: 28%;
     height: 6.4vw;
     font-size: 1.5vw;
-    border-radius: 0% 5% 5% 0% / 95% 5% 5% 100% ;
-    }
-.links-lower-text{
+    border-radius: 0% 5% 5% 0% / 95% 5% 5% 100%;
+}
+
+.links-lower-text {
     width: 70%;
     padding-top: 2.5%;
     padding-bottom: 2.5%;
     float: left;
     height: 2.4vw;
     font-size: 1.5vw;
-    border-radius: 5% 0% 0% 5% / 5% 0% 0% 5% ;
+    border-radius: 5% 0% 0% 5% / 5% 0% 0% 5%;
 }
+
+
 /*links*/
+
+
 /*pricing*/
-.pricing-header{
+
+.pricing-header {
     width: 50%;
     margin: auto;
-    margin-top:10%;
-    margin-bottom:10%;
+    margin-top: 10%;
+    margin-bottom: 10%;
 }
-.pricing-header-h2{
+
+.pricing-header-h2 {
     margin: 5%;
 }
-.pricing-body-container{
+
+.pricing-body-container {
     width: 75%;
-    margin:auto;
+    margin: auto;
 }
-.pricing-body-container::after{
+
+.pricing-body-container::after {
     content: '';
     display: block;
     clear: both;
 }
-.pricing-body-item-side,.pricing-body-item-middle{
+
+.pricing-body-item-side,
+.pricing-body-item-middle {
     display: block;
-    border-radius: 2% ;
-    margin:auto;
-    margin-top:5%;
-    margin-bottom:5%;
-    padding-top:5%;
+    border-radius: 2%;
+    margin: auto;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    padding-top: 5%;
 }
-.price-h2,.price-right{
+
+.price-h2,
+.price-right {
     display: inline-block;
 }
-.price{
+
+.price {
     width: fit-content;
-    margin:auto;
-    margin-top:5%;
-    margin-bottom:5%;
+    margin: auto;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
-.offers{
+
+.offers {
     width: fit-content;
     margin: auto;
 }
-.offer-item{
+
+.offer-item {
     padding-top: 5%;
     margin: auto;
     margin-bottom: 10%;
 }
-.pricing-body-item-middle{
-    padding-top:7%;
+
+.pricing-body-item-middle {
+    padding-top: 7%;
 }
-.pricing-button{
+
+.pricing-button {
     width: 80%;
     margin: 0 auto;
     margin-left: 10%;
@@ -307,141 +368,176 @@ margin: 1%;
     padding-top: 5%;
     padding-bottom: 5%;
     font-size: 3vw;
-
 }
-.offers-h6{
+
+.offers-h6 {
     display: inline-block;
     width: fit-content;
     font-size: 1.8vw;
 }
-.offer-tick{
+
+.offer-tick {
     display: inline-block;
     border-radius: 100%;
     background-color: cadetblue;
 }
-.offer-tick-lower{
+
+.offer-tick-lower {
     display: inline-block;
     border-radius: 100%;
     background-color: gray;
 }
 
-.offers{
-    margin:auto;
+.offers {
+    margin: auto;
 }
 
-/*pricing*/
-/*contact*/
 
 /*pricing*/
-/*contact*/
-.contact-upper{
-    padding:10%;
-    padding-bottom:1%;
-    }
-    .contact-upper-left-p{
-        margin:5% auto;
-    }
-    .contact-upper-right-image{
-        display: block;
-        margin: auto;
-    }
-    .contact-upper-right{
-        margin-top:30%;
-        margin-bottom:30%;
-    }
-    .contact-lower{
-        padding-top: 50%;
-      }
-      .contact-lower-container{
-        padding: 10% 10%;
-      }
-      .contact-form-h3{
-        width: 50%;
-        display: block;
-        margin: auto;
-      }
-      .contact-form-header{
-          margin-top:10%;
-          margin-bottom:10%;
-      }
-      .contact-button{
-          display: block;
-      }
-      .contact-form{
-          width:100%
-      }
-      .contact-text{
-        width: 100%;
-        margin: 5% auto;
-        padding-top: 1%;
-        padding-bottom: 1%;
-        border: 1px solid #BDBDBD;
-        border-radius: 10% 10% 10% 10% / 100% 100% 100% 100%;
-        font-size: 4vw;
 
-      }
-      .contact-button{
-          width:100%;
-          padding-top:5%;
-          padding-bottom:5%;
-          border:none;
-          border-radius: 2%;
-    
-      }
+
 /*contact*/
+
+
+/*pricing*/
+
+
+/*contact*/
+
+.contact-upper {
+    padding: 10%;
+    padding-bottom: 1%;
+}
+
+.contact-upper-left-p {
+    margin: 5% auto;
+}
+
+.contact-upper-right-image {
+    display: block;
+    margin: auto;
+}
+
+.contact-upper-right {
+    margin-top: 30%;
+    margin-bottom: 30%;
+}
+
+.contact-lower {
+    padding-top: 50%;
+}
+
+.contact-lower-container {
+    padding: 10% 10%;
+}
+
+.contact-form-h3 {
+    width: 50%;
+    display: block;
+    margin: auto;
+}
+
+.contact-form-header {
+    margin-top: 10%;
+    margin-bottom: 10%;
+}
+
+.contact-button {
+    display: block;
+}
+
+.contact-form {
+    width: 100%
+}
+
+.contact-text {
+    width: 100%;
+    margin: 5% auto;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    border: 1px solid #BDBDBD;
+    border-radius: 10% 10% 10% 10% / 100% 100% 100% 100%;
+    font-size: 4vw;
+}
+
+.contact-button {
+    width: 100%;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    border: none;
+    border-radius: 2%;
+}
+
+
+/*contact*/
+
+
 /*footer*/
-.footer-upper-container{
+
+.footer-upper-container {
     width: 75%;
-    margin:auto;
+    margin: auto;
 }
-.footer-upper-container::after{
+
+.footer-upper-container::after {
     content: '';
-    display:block;
+    display: block;
     clear: both;
 }
-.footer-upper-left{
+
+.footer-upper-left {
     display: block;
-    padding-top:5%;
+    padding-top: 5%;
     margin-left: auto;
     margin-right: auto;
 }
-.footer-upper-right{
+
+.footer-upper-right {
     display: block;
-    padding-top:5%;
-    padding-bottom:5%;
+    padding-top: 5%;
+    padding-bottom: 5%;
     margin-left: auto;
     margin-right: auto;
 }
-.footer-middle-container{
-    width:60%;
-    margin:0 auto;
-}
-.footer-col-header{
-margin-top:10%;
-margin-bottom:10%;
-font-size: 4vw;
-}
-.footer-col-li img{
-    display: inline-block;
-    padding-top:5%;
-}
-.footer-col-li div{
-    display: inline-block;
-    margin-left:5%;
-}
-.footer-lower-container{
+
+.footer-middle-container {
     width: 60%;
     margin: 0 auto;
-    padding-top:5%;
-    padding-bottom:10%;
+}
+
+.footer-col-header {
+    margin-top: 10%;
+    margin-bottom: 10%;
+    font-size: 4vw;
+}
+
+.footer-col-li img {
+    display: inline-block;
+    padding-top: 5%;
+}
+
+.footer-col-li div {
+    display: inline-block;
+    margin-left: 5%;
+}
+
+.footer-lower-container {
+    width: 60%;
+    margin: 0 auto;
+    padding-top: 5%;
+    padding-bottom: 10%;
     font-size: 3vw;
 }
-.footer-lower-left-p{
-    margin-top:10%;
-    margin-bottom:10%;
+
+.footer-lower-left-p {
+    margin-top: 10%;
+    margin-bottom: 10%;
 }
-.footer-lower-icons{
-    margin-right:5%;
+
+.footer-lower-icons {
+    margin-right: 5%;
     width: 10%;
 }
+
+
 /*footer*/
